--- a/index.html
+++ b/index.html
@@ -4,49 +4,25 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+            integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
         <title>Tikdad Tabel</title>
     </head>
 
     <body>
         <div class="container">
             <div class="filter">
-                <div class="filter--top-box">
-                    <button class="top-box__button">نام کاربر</button>
-                    <button class="top-box__button filter-active">
-                        شماره همراه
-                    </button>
-                    <button class="top-box__button">ID</button>
+                <div class="heading">
+                    <i class="fa-regular fa-rectangle-list"></i>
+                    <h3>مشاهده لیست سفارشات</h3>
                 </div>
 
                 <div class="filter--bottom-box">
-                    <form
-                        class="search-field"
-                        name="search-field"
-                        id="search-field"
-                    >
-                        <input
-                            type="text"
-                            placeholder="جست‌و‌جوی شماره همراه"
-                            class="search-field__input"
-                        />
-                        <button type="submit" class="search-field__button">
-                            <svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                fill="none"
-                                viewBox="0 0 24 24"
-                                stroke-width="1.5"
-                                stroke="currentColor"
-                                class="w-6 h-6 search-field__icon"
-                            >
-                                <path
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                    d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"
-                                />
-                            </svg>
-                        </button>
-                    </form>
-
                     <button type="submit" class="search-button">
                         <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -64,6 +40,18 @@
                         </svg>
                     </button>
 
+                    <form
+                        class="search-field"
+                        name="search-field"
+                        id="search-field"
+                    >
+                        <input
+                            type="text"
+                            placeholder="شماره همراه، نام کاربر، آی‌دی"
+                            class="search-field__input"
+                        />
+                    </form>
+
                     <button class="date-button">
                         <img src="./images/date.png" alt="date-icon" />
                     </button>
@@ -73,245 +61,117 @@
             <div class="tabel-container">
                 <table class="tabel">
                     <tr class="tabel__tr">
-                        <th class="tabel__th"></th>
                         <th class="tabel__th">نام‌و‌نام‌خانوادگی</th>
                         <th class="tabel__th">شماره‌همراه</th>
                         <th class="tabel__th">آی‌دی</th>
-                        <th class="tabel__th">تاریخ عضویت</th>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">محمد‌مهدی مصطفایی</td>
                         <td class="tabel__td">۰۹۱۰۲۹۳۵۰۲۰</td>
                         <td class="tabel__td">۲۵۱۱۴</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۸</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">معصومه محمد‌پور</td>
                         <td class="tabel__td">۰۹۳۷۷۷۴۵۱۶۸</td>
-                        <td class="tabel__td">۸۱۰۴</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۲۸</td>
+                        <td class="tabel__td tabel__td--activeCircle">۸۱۰۴</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">علیرضا پور‌محبوبی</td>
                         <td class="tabel__td">۰۹۱۷۲۰۴۵۱۶۸</td>
                         <td class="tabel__td">۲۵</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۲</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">محمد‌مهدی مصطفایی</td>
                         <td class="tabel__td">۰۹۱۰۲۹۳۵۰۲۰</td>
                         <td class="tabel__td">۲۵۱۱۴</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۸</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">معصومه محمد‌پور</td>
                         <td class="tabel__td">۰۹۳۷۷۷۴۵۱۶۸</td>
-                        <td class="tabel__td">۸۱۰۴</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۲۸</td>
+                        <td class="tabel__td tabel__td--activeCircle">۸۱۰۴</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">علیرضا پور‌محبوبی</td>
                         <td class="tabel__td">۰۹۱۷۲۰۴۵۱۶۸</td>
                         <td class="tabel__td">۲۵</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۲</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">محمد‌مهدی مصطفایی</td>
                         <td class="tabel__td">۰۹۱۰۲۹۳۵۰۲۰</td>
                         <td class="tabel__td">۲۵۱۱۴</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۸</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">معصومه محمد‌پور</td>
                         <td class="tabel__td">۰۹۳۷۷۷۴۵۱۶۸</td>
-                        <td class="tabel__td">۸۱۰۴</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۲۸</td>
+                        <td class="tabel__td tabel__td--activeCircle">۸۱۰۴</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">علیرضا پور‌محبوبی</td>
                         <td class="tabel__td">۰۹۱۷۲۰۴۵۱۶۸</td>
                         <td class="tabel__td">۲۵</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۲</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">محمد‌مهدی مصطفایی</td>
                         <td class="tabel__td">۰۹۱۰۲۹۳۵۰۲۰</td>
                         <td class="tabel__td">۲۵۱۱۴</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۸</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">معصومه محمد‌پور</td>
                         <td class="tabel__td">۰۹۳۷۷۷۴۵۱۶۸</td>
-                        <td class="tabel__td">۸۱۰۴</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۲۸</td>
+                        <td class="tabel__td tabel__td--activeCircle">۸۱۰۴</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">علیرضا پور‌محبوبی</td>
                         <td class="tabel__td">۰۹۱۷۲۰۴۵۱۶۸</td>
                         <td class="tabel__td">۲۵</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۲</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">محمد‌مهدی مصطفایی</td>
                         <td class="tabel__td">۰۹۱۰۲۹۳۵۰۲۰</td>
                         <td class="tabel__td">۲۵۱۱۴</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۸</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">معصومه محمد‌پور</td>
                         <td class="tabel__td">۰۹۳۷۷۷۴۵۱۶۸</td>
-                        <td class="tabel__td">۸۱۰۴</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۲۸</td>
+                        <td class="tabel__td tabel__td--activeCircle">۸۱۰۴</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">علیرضا پور‌محبوبی</td>
                         <td class="tabel__td">۰۹۱۷۲۰۴۵۱۶۸</td>
                         <td class="tabel__td">۲۵</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۲</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">محمد‌مهدی مصطفایی</td>
                         <td class="tabel__td">۰۹۱۰۲۹۳۵۰۲۰</td>
                         <td class="tabel__td">۲۵۱۱۴</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۸</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">معصومه محمد‌پور</td>
                         <td class="tabel__td">۰۹۳۷۷۷۴۵۱۶۸</td>
-                        <td class="tabel__td">۸۱۰۴</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۲۸</td>
+                        <td class="tabel__td tabel__td--activeCircle">۸۱۰۴</td>
                     </tr>
 
                     <tr class="tabel__tr">
-                        <td class="tabel__td">
-                            <img
-                                src="./images/settings.png"
-                                alt="setting-icon"
-                            />
-                        </td>
                         <td class="tabel__td">علیرضا پور‌محبوبی</td>
                         <td class="tabel__td">۰۹۱۷۲۰۴۵۱۶۸</td>
                         <td class="tabel__td">۲۵</td>
-                        <td class="tabel__td">۱۴۰۲/۲/۲</td>
                     </tr>
                 </table>
             </div>
