--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <tr class="tabel__tr">
                         <th class="tabel__th">نام‌و‌نام‌خانوادگی</th>
                         <th class="tabel__th">شماره‌همراه</th>
-                        <th class="tabel__th">آی‌دی</th>
+                        <th class="tabel__th">آیتم‌ها</th>
                     </tr>
 
                     <tr class="tabel__tr">
